--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
         <script src="js/bootstrap.js"></script>
+        <script src="lib/menubar.js"></script>
         <script>
 
             $(function(){
